[gd_scene load_steps=10 format=3 uid="uid://c5xqckkutm44a"]

[ext_resource type="PackedScene" uid="uid://yk0dma18v2xm" path="res://addons/renik-gdscript/sample_models/godette.glb" id="1_hi3e7"]
[ext_resource type="Script" path="res://addons/renik-gdscript/renik.gd" id="2_eba7d"]
[ext_resource type="Script" path="res://addons/renik-gdscript/quick_renik_setup.gd" id="2_oyd6d"]
[ext_resource type="Script" path="res://addons/renik-gdscript/renik_placement.gd" id="3_lrlos"]
[ext_resource type="Script" path="res://addons/renik-gdscript/renik_placement_gait.gd" id="4_ipr1b"]

[sub_resource type="Resource" id="Resource_j48d2"]
resource_name = "ForwardGait"
script = ExtResource("4_ipr1b")
speed_scalar_min = 1.0
speed_scalar_max = 0.5
ground_time = 5.0
lift_time_base = 10.0
lift_time_scalar = 5.0
apex_in_time_base = 10.0
apex_in_time_scalar = 5.0
apex_out_time_base = 5.0
apex_out_time_scalar = 5.0
drop_time_base = 5.0
drop_time_scalar = 0.0
tip_toe_distance_scalar = 1.5708
tip_toe_speed_scalar = 0.785398
tip_toe_angle_max = 1.0472
lift_vertical = 0.0
lift_vertical_scalar = 0.4
lift_horizontal_scalar = 0.7
lift_angle = 1.5708
apex_vertical = 0.0
apex_vertical_scalar = 0.1
apex_angle = 0.392699
drop_vertical = 0.0
drop_vertical_scalar = 0.05
drop_horizontal_scalar = 0.25
drop_angle = -0.392699
contact_point_ease = 0.05
contact_point_ease_scalar = 0.4
scaling_ease = 0.85

[sub_resource type="Resource" id="Resource_il1ek"]
resource_name = "BackwardGait"
script = ExtResource("4_ipr1b")
speed_scalar_min = 0.5
speed_scalar_max = 0.75
ground_time = 5.0
lift_time_base = 5.0
lift_time_scalar = 5.0
apex_in_time_base = 10.0
apex_in_time_scalar = 5.0
apex_out_time_base = 10.0
apex_out_time_scalar = 5.0
drop_time_base = 5.0
drop_time_scalar = 5.0
tip_toe_distance_scalar = 0.0
tip_toe_speed_scalar = 0.0
tip_toe_angle_max = 0.0
lift_vertical = 0.025
lift_vertical_scalar = 0.1
lift_horizontal_scalar = 0.33
lift_angle = -0.392699
apex_vertical = 0.1
apex_vertical_scalar = 0.1
apex_angle = 0.392699
drop_vertical = 0.0
drop_vertical_scalar = 0.1
drop_horizontal_scalar = 0.25
drop_angle = 0.392699
contact_point_ease = 0.1
contact_point_ease_scalar = 0.4
scaling_ease = 0.85

[sub_resource type="Resource" id="Resource_teecj"]
resource_name = "SidewaysGait"
script = ExtResource("4_ipr1b")
speed_scalar_min = 0.75
speed_scalar_max = 0.75
ground_time = 10.0
lift_time_base = 5.0
lift_time_scalar = 5.0
apex_in_time_base = 10.0
apex_in_time_scalar = 5.0
apex_out_time_base = 10.0
apex_out_time_scalar = 5.0
drop_time_base = 5.0
drop_time_scalar = 5.0
tip_toe_distance_scalar = 0.0
tip_toe_speed_scalar = 0.0
tip_toe_angle_max = 0.0
lift_vertical = 0.05
lift_vertical_scalar = 0.05
lift_horizontal_scalar = 0.2
lift_angle = 0.0
apex_vertical = 0.01
apex_vertical_scalar = 0.1
apex_angle = 0.392699
drop_vertical = 0.01
drop_vertical_scalar = 0.05
drop_horizontal_scalar = 0.25
drop_angle = 0.0
contact_point_ease = 0.1
contact_point_ease_scalar = 0.4
scaling_ease = 0.85

[sub_resource type="BoxShape3D" id="BoxShape3D_itlrt"]
size = Vector3(10, 0, 10)

[node name="test_rig" type="Node3D"]

[node name="Godette_vrm_v4" parent="." instance=ExtResource("1_hi3e7")]

[node name="Skeleton3D" parent="Godette_vrm_v4" index="0"]
bones/1/position = Vector3(-0.0744837, 0.60449, -0.0597072)
bones/1/rotation = Quaternion(0.0494269, 2.28966e-09, 1.1331e-10, 0.998778)
bones/2/rotation = Quaternion(-0.0695532, -3.21248e-09, -2.23982e-10, 0.997578)
bones/3/rotation = Quaternion(-0.0244192, -1.5263e-09, 2.25826e-08, 0.999702)
bones/4/rotation = Quaternion(0.273604, 5.43521e-09, -1.23688e-07, 0.961843)
bones/5/rotation = Quaternion(-0.230463, -4.15358e-09, 1.01645e-07, 0.973081)
bones/25/rotation = Quaternion(-0.469041, -0.518232, -0.603367, 0.383906)
bones/26/rotation = Quaternion(0.480641, 0.77718, -0.159992, 0.373334)
bones/27/rotation = Quaternion(0.532197, -0.224913, -0.639068, 0.507714)
bones/28/rotation = Quaternion(-0.128192, 0.370608, 0.510672, 0.765135)
bones/41/rotation = Quaternion(-0.467395, 0.522384, 0.59191, 0.397868)
bones/42/rotation = Quaternion(-0.531852, 0.803082, -0.0545982, -0.263081)
bones/43/rotation = Quaternion(0.506577, 0.260874, 0.587164, 0.574945)
bones/44/rotation = Quaternion(-0.0630126, -0.34281, -0.391519, 0.8516)
bones/61/rotation = Quaternion(-1.97195e-09, 0.199961, 0.979804, 1.42477e-10)
bones/62/rotation = Quaternion(-4.27572e-07, 0.941365, -0.337391, 1.19355e-06)
bones/63/rotation = Quaternion(1.07178e-06, -0.534561, 0.84513, 6.77969e-07)
bones/65/rotation = Quaternion(-5.02945e-10, 0.199961, 0.979804, -7.45468e-10)
bones/66/rotation = Quaternion(4.68749e-07, 0.941365, -0.337391, -1.3031e-06)
bones/67/rotation = Quaternion(-1.16932e-06, -0.534561, 0.84513, -7.38006e-07)

[node name="LogicContainer" type="Node3D" parent="."]
transform = Transform3D(0.898533, 0.432097, -0.077013, -0.433652, 0.84693, -0.307663, -0.067716, 0.309842, 0.948374, 0, 0, 0)
script = ExtResource("2_oyd6d")

[node name="RenIK" type="Node3D" parent="LogicContainer"]
transform = Transform3D(1, 9.31323e-09, 0, -6.89179e-08, 1, 2.98023e-08, -7.45058e-09, -2.98023e-08, 1, 0, 0, 0)
script = ExtResource("2_eba7d")
live_preview = true
armature_skeleton_path = NodePath("../../Godette_vrm_v4/Skeleton3D")
armature_head_target = NodePath("../Targets/Head")
armature_left_hand_target = NodePath("../Targets/LeftHand")
armature_right_hand_target = NodePath("../Targets/RightHand")
armature_hip_target = NodePath("../Targets/Hips")
armature_left_foot_target = NodePath("../Targets/LeftFoot")
armature_right_foot_target = NodePath("../Targets/RightFoot")
arm_elbow_direction_offset = 1.22173
arm_upper_arm_twisting = 0.5
arm_upper_arm_twist_offset = -0.872665
arm_forearm_twisting = 0.66666
arm_forearm_twist_offset = -0.872665
arm_twist_inflection_point = 0.349066
arm_twist_overflow = 0.785398
arm_pole_offset = Quaternion(0.113039, -0.0652631, 0.495722, 0.858616)
arm_target_position_influence = Vector3(2, -1.5, -1)
arm_target_rotation_influence = 0.33
arm_shoulder_offset = Quaternion(0, 0, 0, 1)
arm_shoulder_pole_offset = Quaternion(0, 0, 0, 1)
leg_thigh_twisting = 0.25
leg_lower_leg_twisting = 0.25
leg_lower_leg_twist_offset = 3.14159
leg_twist_overflow = 0.785398
leg_pole_offset = Quaternion(0, 0, 1, -4.37114e-08)
leg_target_rotation_influence = 0.5
torso_spine_curve = Vector3(0, 15, -15)
torso_upper_spine_stiffness = 0.5
torso_lower_spine_stiffness = 0.5
torso_spine_twist = 1.0

[node name="RenIKFootPlacement" type="Node3D" parent="LogicContainer"]
transform = Transform3D(1, 1.11759e-08, 0, -6.70552e-08, 1, 0, -7.45058e-09, 0, 1, 0, 0, 0)
script = ExtResource("3_lrlos")
forward_gait = SubResource("Resource_j48d2")
backward_gait = SubResource("Resource_il1ek")
sideways_gait = SubResource("Resource_teecj")
left_hip_offset = Vector3(0.109996, -0.149882, -0.047796)
right_hip_offset = Vector3(-0.109996, -0.149882, -0.047796)
live_preview = true
armature_skeleton_path = NodePath("../../Godette_vrm_v4/Skeleton3D")
enable_hip_placement = true
armature_head_target = NodePath("../Targets/Head")
armature_hip_target = NodePath("../Targets/Hips")
armature_left_foot_target = NodePath("../Targets/LeftFoot")
armature_right_foot_target = NodePath("../Targets/RightFoot")

[node name="Targets" type="Node" parent="LogicContainer"]

[node name="Head" type="Marker3D" parent="LogicContainer/Targets"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0744837, 0.939519, -0.050777)

[node name="Hips" type="Marker3D" parent="LogicContainer/Targets"]
transform = Transform3D(1, 0, 0, 0, 0.995114, -0.0987329, 0, 0.0987329, 0.995114, -0.0744837, 0.60449, -0.0597072)

[node name="LeftHand" type="Marker3D" parent="LogicContainer/Targets"]
transform = Transform3D(0.24135, -0.551465, -0.798522, -0.947172, -0.312962, -0.0701449, -0.211225, 0.773267, -0.597865, 0.0122693, 0.75007, 0.0715326)

[node name="RightHand" type="Marker3D" parent="LogicContainer/Targets"]
transform = Transform3D(0.526686, 0.373112, 0.763799, 0.781623, -0.565782, -0.262595, 0.334166, 0.735308, -0.589622, -0.20387, 0.75007, 0.0995117)

[node name="LeftFoot" type="Marker3D" parent="LogicContainer/Targets"]
transform = Transform3D(-1, 0, 0, 0, 0.0582434, 0.998302, 0, 0.998302, -0.0582435, 0.0355119, 0.0495057, -0.129251)

[node name="RightFoot" type="Marker3D" parent="LogicContainer/Targets"]
transform = Transform3D(-1, 0, 0, 0, 0.0582434, 0.998302, 0, 0.998302, -0.0582435, -0.184479, 0.0495057, -0.129251)

[node name="BoneAttachment3D" type="Node3D" parent="LogicContainer/Targets"]
transform = Transform3D(-1, 0, 0, 0, 0, 1, 0, 1, 0, 0.16152, 0.0643738, 0.00805585)

[node name="BoneAttachment3D2" type="Node3D" parent="LogicContainer/Targets"]
transform = Transform3D(-1, 0, 0, 0, 0, 1, 0, 1, 0, -0.161519, 0.0643737, 0.00805577)

[node name="BoneAttachment3D3" type="Node3D" parent="LogicContainer/Targets"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.78326e-09, 0.645653, 0.0411277)

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_itlrt")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.998302, 0.0582435, 0, -0.0582435, 0.998302, 0, -0.26238, 3.48239)
use_collision = true
size = Vector3(2, 1, 10)

[editable path="Godette_vrm_v4"]
